# HenigmaEngine

./: .gitignore  .gitmodules  CMakeLists.txt  ToDo.md  ToDoList.md  main.cpp  teki.txt  test.cpp
Include/: Barva.h  Font.h  Log.h  Matematika.h  Risalnik.h
include/: barva.h  font.h  henigma_engine.h  log.h  objekt.h  ploscice.h  risalnik.h  zvok.h
komponente/: kompinenta.h  komponenta.cpp  komponenta.h
komponente/besedilo/: besedilo.cpp  besedilo.h
komponente/gumb/: gumb.cpp  gumb.h
komponente/transformacija/: transformacija.cpp  transformacija.h
komponente/upodabljalnik/: upodabljalnik.cpp  upodabljalnik.h
matematika/: matematika.cpp  matematika.h
objekt/: objekt.cpp  objekt.h
ostalo/: ostalo.cpp  ostalo.h
podEnote/scena/: scena.cpp  scena.h
podEnote/skupina/: skupina.cpp  skupina.h
renderer/: renderer.cpp  renderer.h
src/: a.out  barva.cpp  font.cpp  main.cpp  objekt.cpp  ploscice.cpp  risalnik.cpp  test.cpp  zvok.cpp
src/Font/: Font.cpp
src/Log/: Log.h
src/Matematika/: Matematika.cpp  Matematika.h
src/Render/: Font.cpp  Render.cpp  Render.h  Risalnik.cpp  Scene.cpp  stb_image.h
src/Risalnik/: CallBack.cpp  NaloziBufferje.cpp  NarediShaderje.cpp  Narisi.cpp  Risalnik.cpp  Risalnik.h  TeksturaFont.cpp  Zanka.cpp
src/SPL/: Hash.h  Niz.h  Tabela.h  Zemljevid.h
src/Scena/: Scena.h  TestScena.h
src/glad/include/glad/: glad.h
src/glad/src/: glad.c
src/ostalo/: ostalo.cpp  ostalo.h
